     distributions to avoid other software linking against
     libgutenprint breaking.

  2) Duplicate Transparency entries in the media types for Canon
     iP4100 and similar printers have been removed.

  3) The range of fine position adjustment of CD media has been
     increased for Epson printers.

  4) The German translation has been updated.

* Changes from 5.2.7

  1) The Canon driver has been significantly overhauled for this
     release, and output (and in some cases functionality) may be
     significantly different from previous releases.  We expect to
     perform further work in future releases.  Specific changes
     include:

     * All known combinations of offered modes now work in CUPS.
       Previously, certain combinations would fail to print, with
       error messages about invalid combinations of printing options.

     * The following Canon printer models were completely redefined or
       had major changes carried out in the supported modes:

	 Canon   BJC 3000    (EXPERIMENTAL)
	 Canon   BJC S300    (EXPERIMENTAL)
	 Canon   BJC S500    (EXPERIMENTAL)
	 Canon   BJC S600    (EXPERIMENTAL)
	 Canon   BJC S800    (EXPERIMENTAL)
	 Canon PIXMA i80     (EXPERIMENTAL)
	 Canon PIXMA i560    (EXPERIMENTAL)
	 Canon PIXMA i850    (EXPERIMENTAL) *1
	 Canon PIXMA i860    (EXPERIMENTAL) *1
	 Canon PIXMA i865    (EXPERIMENTAL) *1
	 Canon PIXMA iP2000  (EXPERIMENTAL)
	 Canon PIXMA iP4100  (EXPERIMENTAL)
	 Canon PIXMA iP5000  (EXPERIMENTAL)
	 Canon PIXMA iP6210D (EXPERIMENTAL)
	 Canon PIXMA iP6220D (EXPERIMENTAL)
	 Canon PIXMA iP6310D (EXPERIMENTAL)
	 Canon PIXMA MP600
	 Canon PIXMA MP750
	 Canon PIXMA MP760
	 Canon PIXMA MP770
	 Canon PIXMA MP780
	 Canon PIXMA MP790
	 Canon PIXMA MP970

	 *1: for compatibility, the original printers are named with
	  "old" appended. These old printers will be deprecated in a
	  future release.

     * Support for the following Canon printers was greatly improved, or
       tested:

	 Canon PIXMA MP700